TextMusicEditor/parser.ts
module Lily {
    export var parser = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
    (function() {
        "use strict";

        function peg$subclass(child, parent) {
            function ctor() { this.constructor = child; }
            ctor.prototype = parent.prototype;
            child.prototype = new ctor();
        }

        function peg$SyntaxError(message, expected, found, location) {
            this.message  = message;
            this.expected = expected;
            this.found    = found;
            this.location = location;
            this.name     = "SyntaxError";

            if (typeof (<any>Error).captureStackTrace === "function") {
                (<any>Error).captureStackTrace(this, peg$SyntaxError);
            }
        }

        peg$subclass(peg$SyntaxError, Error);

        (<any>peg$SyntaxError).buildMessage = function(expected, found) {
            var DESCRIBE_EXPECTATION_FNS = {
                literal: function(expectation) {
                    return "\"" + literalEscape(expectation.text) + "\"";
                },

                "class": function(expectation) {
                    var escapedParts = "",
                        i;

                    for (i = 0; i < expectation.parts.length; i++) {
                        escapedParts += expectation.parts[i] instanceof Array
                          ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                          : classEscape(expectation.parts[i]);
                    }

                    return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
                },

                any: function(expectation) {
                    return "any character";
                },

                end: function(expectation) {
                    return "end of input";
                },

                other: function(expectation) {
                    return expectation.description;
                }
            };

            function hex(ch) {
                return ch.charCodeAt(0).toString(16).toUpperCase();
            }

            function literalEscape(s) {
                return s
                  .replace(/\\/g, '\\\\')
                  .replace(/"/g,  '\\"')
                  .replace(/\0/g, '\\0')
                  .replace(/\t/g, '\\t')
                  .replace(/\n/g, '\\n')
                  .replace(/\r/g, '\\r')
                  .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
                  .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
            }

            function classEscape(s) {
                return s
                  .replace(/\\/g, '\\\\')
                  .replace(/\]/g, '\\]')
                  .replace(/\^/g, '\\^')
                  .replace(/-/g,  '\\-')
                  .replace(/\0/g, '\\0')
                  .replace(/\t/g, '\\t')
                  .replace(/\n/g, '\\n')
                  .replace(/\r/g, '\\r')
                  .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
                  .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
            }

            function describeExpectation(expectation) {
                return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
            }

            function describeExpected(expected) {
                var descriptions = new Array(expected.length),
                    i, j;

                for (i = 0; i < expected.length; i++) {
                    descriptions[i] = describeExpectation(expected[i]);
                }

                descriptions.sort();

                if (descriptions.length > 0) {
                    for (i = 1, j = 1; i < descriptions.length; i++) {
                        if (descriptions[i - 1] !== descriptions[i]) {
                            descriptions[j] = descriptions[i];
                            j++;
                        }
                    }
                    descriptions.length = j;
                }

                switch (descriptions.length) {
                    case 1:
                        return descriptions[0];

                    case 2:
                        return descriptions[0] + " or " + descriptions[1];

                    default:
                        return descriptions.slice(0, -1).join(", ")
                          + ", or "
                          + descriptions[descriptions.length - 1];
                }
            }

            function describeFound(found) {
                return found ? "\"" + literalEscape(found) + "\"" : "end of input";
            }

            return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
        };

        function peg$parse(input, options) {
            options = options !== void 0 ? options : {};

            var peg$FAILED = {},

                peg$startRuleFunctions = { File: peg$parseFile },
                peg$startRuleFunction  = peg$parseFile,

                peg$c0 = function(ex) { return ex; },
                peg$c1 = function(music) { return {mus: music}; },
                peg$c2 = /^[ \t\n\r]/,
                peg$c3 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
                peg$c4 = function(s) { return undefined; },
                peg$c5 = "\\score",
                peg$c6 = peg$literalExpectation("\\score", false),
                peg$c7 = "{",
                peg$c8 = peg$literalExpectation("{", false),
                peg$c9 = "}",
                peg$c10 = peg$literalExpectation("}", false),
                peg$c11 = "\\new",
                peg$c12 = peg$literalExpectation("\\new", false),
                peg$c13 = "Staff",
                peg$c14 = peg$literalExpectation("Staff", false),
                peg$c15 = function(notes) { return {n: notes}; },
                peg$c16 = "<<",
                peg$c17 = peg$literalExpectation("<<", false),
                peg$c18 = ">>",
                peg$c19 = peg$literalExpectation(">>", false),
                peg$c20 = "\\numericTimeSignature",
                peg$c21 = peg$literalExpectation("\\numericTimeSignature", false),
                peg$c22 = "~",
                peg$c23 = peg$literalExpectation("~", false),
                peg$c24 = "[",
                peg$c25 = peg$literalExpectation("[", false),
                peg$c26 = "]",
                peg$c27 = peg$literalExpectation("]", false),
                peg$c28 = "\\(",
                peg$c29 = peg$literalExpectation("\\(", false),
                peg$c30 = "\\)",
                peg$c31 = peg$literalExpectation("\\)", false),
                peg$c32 = "(",
                peg$c33 = peg$literalExpectation("(", false),
                peg$c34 = ")",
                peg$c35 = peg$literalExpectation(")", false),
                peg$c36 = "|",
                peg$c37 = peg$literalExpectation("|", false),
                peg$c38 = "\\arpeggio",
                peg$c39 = peg$literalExpectation("\\arpeggio", false),
                peg$c40 = "%",
                peg$c41 = peg$literalExpectation("%", false),
                peg$c42 = /^[^\n]/,
                peg$c43 = peg$classExpectation(["\n"], true, false),
                peg$c44 = "\n",
                peg$c45 = peg$literalExpectation("\n", false),
                peg$c46 = function(c) { return { "Comment": c.join('') }; },
                peg$c47 = peg$otherExpectation("command_element_clef"),
                peg$c48 = "\\clef",
                peg$c49 = peg$literalExpectation("\\clef", false),
                peg$c50 = function(s) { return { clef: s } },
                peg$c51 = peg$otherExpectation("command_event_key"),
                peg$c52 = "\\key",
                peg$c53 = peg$literalExpectation("\\key", false),
                peg$c54 = function(s, m) { return { key: s, mode: m } },
                peg$c55 = "\\major",
                peg$c56 = peg$literalExpectation("\\major", false),
                peg$c57 = "\\minor",
                peg$c58 = peg$literalExpectation("\\minor", false),
                peg$c59 = peg$otherExpectation("command_element_time"),
                peg$c60 = "\\time",
                peg$c61 = peg$literalExpectation("\\time", false),
                peg$c62 = /^[0-9]/,
                peg$c63 = peg$classExpectation([["0", "9"]], false, false),
                peg$c64 = "/",
                peg$c65 = peg$literalExpectation("/", false),
                peg$c66 = function(s, d) { return { nom: s, den: d } },
                peg$c67 = function(m) { return m },
                peg$c68 = function(p, o, d) { return { p: p, o:o, d:d }},
                peg$c69 = "<",
                peg$c70 = peg$literalExpectation("<", false),
                peg$c71 = ">",
                peg$c72 = peg$literalExpectation(">", false),
                peg$c73 = function(n, d) { return {"Chord" : { "Notes": n, "Dur": d } }; },
                peg$c74 = function(d, dot) { return { dur: d, dots: dot } },
                peg$c75 = ".",
                peg$c76 = peg$literalExpectation(".", false),
                peg$c77 = peg$otherExpectation("pitch"),
                peg$c78 = /^[a-hrs]/,
                peg$c79 = peg$classExpectation([["a", "h"], "r", "s"], false, false),
                peg$c80 = "s",
                peg$c81 = peg$literalExpectation("s", false),
                peg$c82 = "f",
                peg$c83 = peg$literalExpectation("f", false),
                peg$c84 = "is",
                peg$c85 = peg$literalExpectation("is", false),
                peg$c86 = "es",
                peg$c87 = peg$literalExpectation("es", false),
                peg$c88 = peg$otherExpectation("sup_quotes_sub_quotes"),
                peg$c89 = /^[',]/,
                peg$c90 = peg$classExpectation(["'", ","], false, false),
                peg$c91 = function(s) { return s.join(""); },
                peg$c92 = peg$otherExpectation("relative_music"),
                peg$c93 = "\\relative",
                peg$c94 = peg$literalExpectation("\\relative", false),
                peg$c95 = function(rel, s) {
                    return { rel: s }
                },
                peg$c96 = "\\version",
                peg$c97 = peg$literalExpectation("\\version", false),
                peg$c98 = function(version, s) {
                    return { version: s }
                },
                peg$c99 = "\\include",
                peg$c100 = peg$literalExpectation("\\include", false),
                peg$c101 = function(version, s) {
                    return { include: s }
                },
                peg$c102 = "\"",
                peg$c103 = peg$literalExpectation("\"", false),
                peg$c104 = peg$anyExpectation(),
                peg$c105 = function(c) { return c; },
                peg$c106 = /^[^"]/,
                peg$c107 = peg$classExpectation(["\""], true, false),
                peg$c108 = function(c) { return c },
                peg$c109 = "\\",
                peg$c110 = peg$literalExpectation("\\", false),
                peg$c111 = peg$otherExpectation("whitespace"),
                peg$c112 = function(s) { return " " },
                peg$c113 = peg$otherExpectation("optional_whitespace"),
                peg$c114 = function(s) { return {"WS": s}; },

                peg$currPos          = 0,
                peg$savedPos         = 0,
                peg$posDetailsCache  = [{ line: 1, column: 1 }],
                peg$maxFailPos       = 0,
                peg$maxFailExpected  = [],
                peg$silentFails      = 0,

                peg$result;

            if ("startRule" in options) {
                if (!(options.startRule in peg$startRuleFunctions)) {
                    throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
                }

                peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
            }

            function text() {
                return input.substring(peg$savedPos, peg$currPos);
            }

            function location() {
                return peg$computeLocation(peg$savedPos, peg$currPos);
            }

            function expected(description, location) {
                location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

                throw peg$buildStructuredError(
                  [peg$otherExpectation(description)],
                  input.substring(peg$savedPos, peg$currPos),
                  location
                );
            }

            function error(message, location) {
                location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

                throw peg$buildSimpleError(message, location);
            }

            function peg$literalExpectation(text, ignoreCase) {
                return { type: "literal", text: text, ignoreCase: ignoreCase };
            }

            function peg$classExpectation(parts, inverted, ignoreCase) {
                return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
            }

            function peg$anyExpectation() {
                return { type: "any" };
            }

            function peg$endExpectation() {
                return { type: "end" };
            }

            function peg$otherExpectation(description) {
                return { type: "other", description: description };
            }

            function peg$computePosDetails(pos) {
                var details = peg$posDetailsCache[pos], p;

                if (details) {
                    return details;
                } else {
                    p = pos - 1;
                    while (!peg$posDetailsCache[p]) {
                        p--;
                    }

                    details = peg$posDetailsCache[p];
                    details = {
                        line:   details.line,
                        column: details.column
                    };

                    while (p < pos) {
                        if (input.charCodeAt(p) === 10) {
                            details.line++;
                            details.column = 1;
                        } else {
                            details.column++;
                        }

                        p++;
                    }

                    peg$posDetailsCache[pos] = details;
                    return details;
                }
            }

            function peg$computeLocation(startPos, endPos) {
                var startPosDetails = peg$computePosDetails(startPos),
                    endPosDetails   = peg$computePosDetails(endPos);

                return {
                    start: {
                        offset: startPos,
                        line:   startPosDetails.line,
                        column: startPosDetails.column
                    },
                    end: {
                        offset: endPos,
                        line:   endPosDetails.line,
                        column: endPosDetails.column
                    }
                };
            }

            function peg$fail(expected) {
                if (peg$currPos < peg$maxFailPos) { return; }

                if (peg$currPos > peg$maxFailPos) {
                    peg$maxFailPos = peg$currPos;
                    peg$maxFailExpected = [];
                }

                peg$maxFailExpected.push(expected);
            }

            function peg$buildSimpleError(message, location) {
                return new peg$SyntaxError(message, null, null, location);
            }

            function peg$buildStructuredError(expected, found, location) {
                return new peg$SyntaxError(
                  (<any>peg$SyntaxError).buildMessage(expected, found),
                  expected,
                  found,
                  location
                );
            }

            function peg$parseFile() {
                var s0, s1, s2;

                s0 = peg$currPos;
                s1 = [];
                s2 = peg$parseExpression();
                while (s2 !== peg$FAILED) {
                    s1.push(s2);
                    s2 = peg$parseExpression();
                }
                if (s1 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c0(s1);
                }
                s0 = s1;

                return s0;
            }

            function peg$parseExpression() {
                var s0, s1, s2;

                s0 = peg$parseVersion();
                if (s0 === peg$FAILED) {
                    s0 = peg$parseInclude();
                    if (s0 === peg$FAILED) {
                        s0 = peg$parseRelative();
                        if (s0 === peg$FAILED) {
                            s0 = peg$parseScore();
                            if (s0 === peg$FAILED) {
                                s0 = peg$currPos;
                                s1 = peg$parseMusic();
                                if (s1 !== peg$FAILED) {
                                    peg$savedPos = s0;
                                    s1 = peg$c1(s1);
                                }
                                s0 = s1;
                                if (s0 === peg$FAILED) {
                                    s0 = peg$currPos;
                                    s1 = [];
                                    if (peg$c2.test(input.charAt(peg$currPos))) {
                                        s2 = input.charAt(peg$currPos);
                                        peg$currPos++;
                                    } else {
                                        s2 = peg$FAILED;
                                        if (peg$silentFails === 0) { peg$fail(peg$c3); }
                                    }
                                    if (s2 !== peg$FAILED) {
                                        while (s2 !== peg$FAILED) {
                                            s1.push(s2);
                                            if (peg$c2.test(input.charAt(peg$currPos))) {
                                                s2 = input.charAt(peg$currPos);
                                                peg$currPos++;
                                            } else {
                                                s2 = peg$FAILED;
                                                if (peg$silentFails === 0) { peg$fail(peg$c3); }
                                            }
                                        }
                                    } else {
                                        s1 = peg$FAILED;
                                    }
                                    if (s1 !== peg$FAILED) {
                                        peg$savedPos = s0;
                                        s1 = peg$c4(s1);
                                    }
                                    s0 = s1;
                                }
                            }
                        }
                    }
                }

                return s0;
            }

            function peg$parseScore() {
                var s0, s1, s2, s3;

                s0 = peg$currPos;
                if (input.substr(peg$currPos, 6) === peg$c5) {
                    s1 = peg$c5;
                    peg$currPos += 6;
                } else {
                    s1 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c6); }
                }
                if (s1 !== peg$FAILED) {
                    s2 = peg$parse_();
                    if (s2 !== peg$FAILED) {
                        s3 = peg$parseScoreMusic();
                        if (s3 !== peg$FAILED) {
                            s1 = [s1, s2, s3];
                            s0 = s1;
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }

                return s0;
            }

            function peg$parseScoreMusic() {
                var s0, s1, s2, s3, s4;

                s0 = peg$currPos;
                if (input.charCodeAt(peg$currPos) === 123) {
                    s1 = peg$c7;
                    peg$currPos++;
                } else {
                    s1 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c8); }
                }
                if (s1 !== peg$FAILED) {
                    s2 = peg$parse__();
                    if (s2 !== peg$FAILED) {
                        s3 = [];
                        s4 = peg$parseScoreThings();
                        while (s4 !== peg$FAILED) {
                            s3.push(s4);
                            s4 = peg$parseScoreThings();
                        }
                        if (s3 !== peg$FAILED) {
                            if (input.charCodeAt(peg$currPos) === 125) {
                                s4 = peg$c9;
                                peg$currPos++;
                            } else {
                                s4 = peg$FAILED;
                                if (peg$silentFails === 0) { peg$fail(peg$c10); }
                            }
                            if (s4 !== peg$FAILED) {
                                s1 = [s1, s2, s3, s4];
                                s0 = s1;
                            } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }

                return s0;
            }

            function peg$parseScoreThings() {
                var s0, s1, s2, s3, s4, s5, s6;

                s0 = peg$currPos;
                if (input.substr(peg$currPos, 4) === peg$c11) {
                    s1 = peg$c11;
                    peg$currPos += 4;
                } else {
                    s1 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c12); }
                }
                if (s1 !== peg$FAILED) {
                    s2 = peg$parse_();
                    if (s2 !== peg$FAILED) {
                        if (input.substr(peg$currPos, 5) === peg$c13) {
                            s3 = peg$c13;
                            peg$currPos += 5;
                        } else {
                            s3 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c14); }
                        }
                        if (s3 !== peg$FAILED) {
                            s4 = peg$parse_();
                            if (s4 !== peg$FAILED) {
                                s5 = peg$parseMusic();
                                if (s5 !== peg$FAILED) {
                                    s6 = peg$parse__();
                                    if (s6 !== peg$FAILED) {
                                        s1 = [s1, s2, s3, s4, s5, s6];
                                        s0 = s1;
                                    } else {
                                        peg$currPos = s0;
                                        s0 = peg$FAILED;
                                    }
                                } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                }
                            } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }

                return s0;
            }

            function peg$parseMusic() {
                var s0, s1, s2, s3, s4, s5, s6, s7, s8;

                s0 = peg$currPos;
                if (input.charCodeAt(peg$currPos) === 123) {
                    s1 = peg$c7;
                    peg$currPos++;
                } else {
                    s1 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c8); }
                }
                if (s1 !== peg$FAILED) {
                    s2 = peg$parse__();
                    if (s2 !== peg$FAILED) {
                        s3 = [];
                        s4 = peg$parseMusicElement();
                        while (s4 !== peg$FAILED) {
                            s3.push(s4);
                            s4 = peg$parseMusicElement();
                        }
                        if (s3 !== peg$FAILED) {
                            s4 = peg$parse__();
                            if (s4 !== peg$FAILED) {
                                if (input.charCodeAt(peg$currPos) === 125) {
                                    s5 = peg$c9;
                                    peg$currPos++;
                                } else {
                                    s5 = peg$FAILED;
                                    if (peg$silentFails === 0) { peg$fail(peg$c10); }
                                }
                                if (s5 !== peg$FAILED) {
                                    peg$savedPos = s0;
                                    s1 = peg$c15(s3);
                                    s0 = s1;
                                } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                }
                            } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
                if (s0 === peg$FAILED) {
                    s0 = peg$currPos;
                    if (input.charCodeAt(peg$currPos) === 123) {
                        s1 = peg$c7;
                        peg$currPos++;
                    } else {
                        s1 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c8); }
                    }
                    if (s1 !== peg$FAILED) {
                        s2 = peg$parse__();
                        if (s2 !== peg$FAILED) {
                            if (input.substr(peg$currPos, 2) === peg$c16) {
                                s3 = peg$c16;
                                peg$currPos += 2;
                            } else {
                                s3 = peg$FAILED;
                                if (peg$silentFails === 0) { peg$fail(peg$c17); }
                            }
                            if (s3 !== peg$FAILED) {
                                s4 = peg$parse__();
                                if (s4 !== peg$FAILED) {
                                    s5 = [];
                                    s6 = peg$parseStaffExpression();
                                    while (s6 !== peg$FAILED) {
                                        s5.push(s6);
                                        s6 = peg$parseStaffExpression();
                                    }
                                    if (s5 !== peg$FAILED) {
                                        if (input.substr(peg$currPos, 2) === peg$c18) {
                                            s6 = peg$c18;
                                            peg$currPos += 2;
                                        } else {
                                            s6 = peg$FAILED;
                                            if (peg$silentFails === 0) { peg$fail(peg$c19); }
                                        }
                                        if (s6 !== peg$FAILED) {
                                            s7 = peg$parse__();
                                            if (s7 !== peg$FAILED) {
                                                if (input.charCodeAt(peg$currPos) === 125) {
                                                    s8 = peg$c9;
                                                    peg$currPos++;
                                                } else {
                                                    s8 = peg$FAILED;
                                                    if (peg$silentFails === 0) { peg$fail(peg$c10); }
                                                }
                                                if (s8 !== peg$FAILED) {
                                                    s1 = [s1, s2, s3, s4, s5, s6, s7, s8];
                                                    s0 = s1;
                                                } else {
                                                    peg$currPos = s0;
                                                    s0 = peg$FAILED;
                                                }
                                            } else {
                                                peg$currPos = s0;
                                                s0 = peg$FAILED;
                                            }
                                        } else {
                                            peg$currPos = s0;
                                            s0 = peg$FAILED;
                                        }
                                    } else {
                                        peg$currPos = s0;
                                        s0 = peg$FAILED;
                                    }
                                } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                }
                            } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                }

                return s0;
            }

            function peg$parseMusicElement() {
                var s0;

                s0 = peg$parseNote();
                if (s0 === peg$FAILED) {
                    s0 = peg$parseChord();
                    if (s0 === peg$FAILED) {
                        s0 = peg$parseClefDef();
                        if (s0 === peg$FAILED) {
                            s0 = peg$parseKeyDef();
                            if (s0 === peg$FAILED) {
                                s0 = peg$parseTimeDef();
                                if (s0 === peg$FAILED) {
                                    s0 = peg$parseCommand();
                                }
                            }
                        }
                    }
                }

                return s0;
            }

            function peg$parseCommand() {
                var s0, s1, s2;

                s0 = peg$currPos;
                if (input.substr(peg$currPos, 21) === peg$c20) {
                    s1 = peg$c20;
                    peg$currPos += 21;
                } else {
                    s1 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c21); }
                }
                if (s1 !== peg$FAILED) {
                    s2 = peg$parse_();
                    if (s2 !== peg$FAILED) {
                        s1 = [s1, s2];
                        s0 = s1;
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
                if (s0 === peg$FAILED) {
                    s0 = peg$currPos;
                    if (input.charCodeAt(peg$currPos) === 126) {
                        s1 = peg$c22;
                        peg$currPos++;
                    } else {
                        s1 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c23); }
                    }
                    if (s1 !== peg$FAILED) {
                        s2 = peg$parse_();
                        if (s2 !== peg$FAILED) {
                            s1 = [s1, s2];
                            s0 = s1;
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                    if (s0 === peg$FAILED) {
                        s0 = peg$currPos;
                        if (input.charCodeAt(peg$currPos) === 91) {
                            s1 = peg$c24;
                            peg$currPos++;
                        } else {
                            s1 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c25); }
                        }
                        if (s1 !== peg$FAILED) {
                            s2 = peg$parse__();
                            if (s2 !== peg$FAILED) {
                                s1 = [s1, s2];
                                s0 = s1;
                            } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                        if (s0 === peg$FAILED) {
                            s0 = peg$currPos;
                            if (input.charCodeAt(peg$currPos) === 93) {
                                s1 = peg$c26;
                                peg$currPos++;
                            } else {
                                s1 = peg$FAILED;
                                if (peg$silentFails === 0) { peg$fail(peg$c27); }
                            }
                            if (s1 !== peg$FAILED) {
                                s2 = peg$parse__();
                                if (s2 !== peg$FAILED) {
                                    s1 = [s1, s2];
                                    s0 = s1;
                                } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                }
                            } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                            }
                            if (s0 === peg$FAILED) {
                                s0 = peg$currPos;
                                if (input.substr(peg$currPos, 2) === peg$c28) {
                                    s1 = peg$c28;
                                    peg$currPos += 2;
                                } else {
                                    s1 = peg$FAILED;
                                    if (peg$silentFails === 0) { peg$fail(peg$c29); }
                                }
                                if (s1 !== peg$FAILED) {
                                    s2 = peg$parse__();
                                    if (s2 !== peg$FAILED) {
                                        s1 = [s1, s2];
                                        s0 = s1;
                                    } else {
                                        peg$currPos = s0;
                                        s0 = peg$FAILED;
                                    }
                                } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                }
                                if (s0 === peg$FAILED) {
                                    s0 = peg$currPos;
                                    if (input.substr(peg$currPos, 2) === peg$c30) {
                                        s1 = peg$c30;
                                        peg$currPos += 2;
                                    } else {
                                        s1 = peg$FAILED;
                                        if (peg$silentFails === 0) { peg$fail(peg$c31); }
                                    }
                                    if (s1 !== peg$FAILED) {
                                        s2 = peg$parse__();
                                        if (s2 !== peg$FAILED) {
                                            s1 = [s1, s2];
                                            s0 = s1;
                                        } else {
                                            peg$currPos = s0;
                                            s0 = peg$FAILED;
                                        }
                                    } else {
                                        peg$currPos = s0;
                                        s0 = peg$FAILED;
                                    }
                                    if (s0 === peg$FAILED) {
                                        s0 = peg$currPos;
                                        if (input.charCodeAt(peg$currPos) === 40) {
                                            s1 = peg$c32;
                                            peg$currPos++;
                                        } else {
                                            s1 = peg$FAILED;
                                            if (peg$silentFails === 0) { peg$fail(peg$c33); }
                                        }
                                        if (s1 !== peg$FAILED) {
                                            s2 = peg$parse__();
                                            if (s2 !== peg$FAILED) {
                                                s1 = [s1, s2];
                                                s0 = s1;
                                            } else {
                                                peg$currPos = s0;
                                                s0 = peg$FAILED;
                                            }
                                        } else {
                                            peg$currPos = s0;
                                            s0 = peg$FAILED;
                                        }
                                        if (s0 === peg$FAILED) {
                                            s0 = peg$currPos;
                                            if (input.charCodeAt(peg$currPos) === 41) {
                                                s1 = peg$c34;
                                                peg$currPos++;
                                            } else {
                                                s1 = peg$FAILED;
                                                if (peg$silentFails === 0) { peg$fail(peg$c35); }
                                            }
                                            if (s1 !== peg$FAILED) {
                                                s2 = peg$parse__();
                                                if (s2 !== peg$FAILED) {
                                                    s1 = [s1, s2];
                                                    s0 = s1;
                                                } else {
                                                    peg$currPos = s0;
                                                    s0 = peg$FAILED;
                                                }
                                            } else {
                                                peg$currPos = s0;
                                                s0 = peg$FAILED;
                                            }
                                            if (s0 === peg$FAILED) {
                                                s0 = peg$currPos;
                                                if (input.charCodeAt(peg$currPos) === 124) {
                                                    s1 = peg$c36;
                                                    peg$currPos++;
                                                } else {
                                                    s1 = peg$FAILED;
                                                    if (peg$silentFails === 0) { peg$fail(peg$c37); }
                                                }
                                                if (s1 !== peg$FAILED) {
                                                    s2 = peg$parse__();
                                                    if (s2 !== peg$FAILED) {
                                                        s1 = [s1, s2];
                                                        s0 = s1;
                                                    } else {
                                                        peg$currPos = s0;
                                                        s0 = peg$FAILED;
                                                    }
                                                } else {
                                                    peg$currPos = s0;
                                                    s0 = peg$FAILED;
                                                }
                                                if (s0 === peg$FAILED) {
                                                    s0 = peg$currPos;
                                                    if (input.substr(peg$currPos, 9) === peg$c38) {
                                                        s1 = peg$c38;
                                                        peg$currPos += 9;
                                                    } else {
